# care_im

./: .env.example  .gitignore  README.md  manage_demo.py  pyproject.toml  test_settings.py
care_im/: __init__.py  apps.py  care_poc.py  message.py  urls.py  utils.py  views.py
care_im/backends/: __init__.py  base.py  console.py  whatsapp.py
care_im/tests/: test_views.py
demo_site/: settings.py  urls.py
